--- a/Unit1/Final/index4.html
+++ b/Unit1/Final/index4.html
@@ -2,33 +2,33 @@
 
 <html lang="en-ca">
 
-  <head>
-    <link rel="stylesheet" href="./css/style.css">
-    <meta charset="utf-8">
-    <meta keywords="books, story, nice">
-    <meta name="description" content="why books rock">
-    <meta name="author" content="Leo">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Go get some books!</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue_grey-indigo.min.css">
+<head>
+  <link rel="stylesheet" href="./css/style.css">
+  <meta charset="utf-8">
+  <meta keywords="books, story, nice">
+  <meta name="description" content="why books rock">
+  <meta name="author" content="Leo">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Go get some books!</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue_grey-indigo.min.css">
 
-    <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
 
-    </head>
-
-
-    <body>
-    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+</head>
 
 
+<body>
+  <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 
 
 
 
-    <div>
+
+
+  <div>
     <!-- Always shows a header, even in smaller screens. -->
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
       <header class="mdl-layout__header">
@@ -39,14 +39,10 @@
           <div class="mdl-layout-spacer"></div>
           <!-- Navigation. We hide it in small screens. -->
           <nav class="mdl-navigation mdl-layout--large-screen-only">
-            <a class="mdl-navigation__link"
-              href="./index.html">1</a>
-            <a class="mdl-navigation__link"
-              href="./index2.html">2</a>
-            <a class="mdl-navigation__link"
-              href="./index3.html">3</a>
-            <a class="mdl-navigation__link"
-              href="./index4.html">4</a>
+            <a class="mdl-navigation__link" href="./index.html">1</a>
+            <a class="mdl-navigation__link" href="./index2.html">2</a>
+            <a class="mdl-navigation__link" href="./index3.html">3</a>
+            <a class="mdl-navigation__link" href="./index4.html">4</a>
           </nav>
         </div>
       </header>
@@ -65,48 +61,51 @@
       </main>
     </div>
 
-    </div>
+  </div>
 
 
-    <br>
-    <br>
-    <br>
+  <br>
+  <br>
+  <br>
 
 
-    <h3 class="mainheaders"> Now it's time for you to go check some of these books out.</h3>
+  <h3 class="mainheaders"> Now it's time for you to go check some of these books out.</h3>
 
-    <p>Now use the search bar below to enter the book you wanna know about and it will take you to the indigo website with the book loaded up.</p>
+  <p>Now use the search bar below to enter the book you wanna know about and it will take you to the indigo website with
+    the book loaded up.</p>
 
 
-    <main class="mdl-layout__content">
+  <main class="mdl-layout__content">
     <!-- Textfield with Floating Label -->
 
     <div class="text">
-    <!-- Simple Textfield -->
-    <form action="#">
-      <div class="mdl-textfield mdl-js-textfield">
-        <input id="userInput" class="mdl-textfield__input" type="text" id="sample1">
-        <label class="mdl-textfield__label" for="sample1">indigo</label>
+      <!-- Simple Textfield -->
+      <form action="#">
+        <div class="mdl-textfield mdl-js-textfield">
+          <input id="userInput" class="mdl-textfield__input" type="text" id="sample1">
+          <label class="mdl-textfield__label" for="sample1">indigo</label>
 
 
-    </div>
-    <div class="button">
-      <!-- Colored FAB button with ripple -->
-      <button id="searchButton" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored">
-        <i class="material-icons">search</i>
-      </button>
-    </div>
-  
-  
-    <div class="clear">
-      <!-- Colored FAB button with ripple -->
-      <button id="clearButton" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored">
-        <i class="material-icons">clear</i>
-      </button>
-    </div>
+        </div>
+        <div class="button">
+          <!-- Colored FAB button with ripple -->
+          <button id="searchButton"
+            class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored">
+            <i class="material-icons">search</i>
+          </button>
+        </div>
 
 
-    </form>
+        <div class="clear">
+          <!-- Colored FAB button with ripple -->
+          <button id="clearButton"
+            class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored">
+            <i class="material-icons">clear</i>
+          </button>
+        </div>
+
+
+      </form>
 
     </div>
 
@@ -132,15 +131,16 @@
     <div id="bookgen">
       <main class="mdl-layout__content">
         <div class="coll">
-        <h5>if you are not sure what book to read</h5>
-        <p id="generatedName"></p>
-        <button onclick="generateRandomName()">click here</button>
-      </div>
+          <h5>if you are not sure what book to read</h5>
+          <p id="generatedName"></p>
+          <button onclick="generateRandomName()">click here</button>
+        </div>
     </div>
     </main>
 
 
-<!-- Square card 
+
+<!-- Square card   -->
 
   <div id="indigo">
       <div class="demo-card-square mdl-card mdl-shadow--2dp">
@@ -157,30 +157,11 @@ This will take you to the indigo home page.
         </div>
       </div>
     </div>
-  -->
 
 
 
-    <div id="indigo">
-      <div class="demo-card-square mdl-card mdl-shadow--2dp">
-        <div class="mdl-card__title mdl-card--expand">
-          <h2 class="mdl-card__title-text"></h2>
-        </div>
-        <div class="mdl-card__supporting-text">
-          This will take you to the indigo home page.
-        </div>
-        <div class="mdl-card__actions mdl-card--border">
-<a href="https://www.indigo.ca/en-ca/" target="_blank"
-  class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
-  GO GET BOOKS
-</a>
+  <script src="./js/script.js"></script>
 
-        </div>
-      </div>
-    </div>
-
-    <script src="./js/script.js"></script>
-
-  </body>
+</body>
 
 </html>
