--- a/Unit1/Final/index5.html
+++ b/Unit1/Final/index5.html
@@ -9,7 +9,7 @@
   <meta name="description" content="why books rock">
   <meta name="author" content="Leo">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Go get some books!</title>
+  <title>Now its time to explore</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue_grey-indigo.min.css">
 
@@ -54,7 +54,7 @@
   <br>
 
 
-  <h3 class="mainheaders"> Now you are probably wondering where should i read.</h3>
+  <h3 class="mainheaders"> Now you are probably wondering where should i go read.</h3>
 
   <p>Well the greset place to go read a book is ...</p>
 
